--- a/stickman muito loko pulando uma corda rosa/css/main.css
+++ b/stickman muito loko pulando uma corda rosa/css/main.css
@@ -11,7 +11,8 @@ body {
 }
   
 .vini{
-    position: relative;
+  position: relative;
+  margin: auto;
 }
   
 .cabeca{
@@ -110,17 +111,15 @@ body {
 
 @keyframes corda {
     0% {
-        transform: rotateX(0deg) translateY(-10px);
-            border-radius: 17% 17% 0 0;
+        transform: rotateX(0deg) scaleY(0.8) translateY(-30px);
+        border-radius: 17% 17% 0 0;
       } 
 
+      /* scaleY(0.6) translateY(-10px) */
       100% {
-        transform: rotateX(-360deg) scaleY(0.6) translateY(-30px);
-            border-radius: 17% 17% 0 0;
+        transform: rotateX(-360deg) scaleY(0.8) translateY(-7px);
+        border-radius: 17% 17% 0 0;
       }
-
-
-
 }
   
 @keyframes cabeca {
