Ajustes por puta frescura

--- a/Dinossauro/css/main.css
+++ b/Dinossauro/css/main.css
@@ -47,7 +47,9 @@ body{
     margin-bottom: 30px;
 }
 
-#word::placeholder{
+#word::placeholder,
+#one p,
+#two p{
     color: black;
 }
 
@@ -55,9 +57,15 @@ body{
     padding-top: 30px;
 }
 
+#result-title
+{
+    padding-bottom: 30px;
+}
+
 #result-title,
 #one,
 #two{
+    color: black;
     font-weight: 900;
     font-size: 25px;
 }
